ADDED DESGIN AND CSS