@@ -11,10 +11,15 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.sql.Date;
+import java.sql.Timestamp;
+import java.time.LocalDate;
+import java.time.LocalDateTime;
+import java.time.ZoneOffset;
+import java.time.format.DateTimeFormatter;
+import java.time.format.FormatStyle;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collector;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.springframework.web.multipart.MultipartFile;
@@ -24,16 +29,16 @@ import org.springframework.web.multipart.MultipartFile;
  * @author ashish.yetre
  */
 public class AttendanceParser {
-
+    
     private final MultipartFile file;
     final String COMMO_SEPARATOR = ",";
-
+    
     private List<AttendanceDTO> attendanceDTOList;
-
+    
     public AttendanceParser(MultipartFile file) {
         this.file = file;
     }
-
+    
     public void parse() throws IOException {
         if (file != null & file.getSize() > 0) {
             List<String> allContentFromFile = getAllContentFromFile();
@@ -42,7 +47,7 @@ public class AttendanceParser {
             }
         }
     }
-
+    
     private List<String> getAllContentFromFile() throws IOException {
         InputStream inputStream = file.getInputStream();
         try (BufferedReader bufferedReader = new BufferedReader(new InputStreamReader(inputStream));) {
@@ -50,7 +55,7 @@ public class AttendanceParser {
             return lines.collect(Collectors.toList());
         }
     }
-
+    
     private void readAttendance(List<String> allContentFromFile) {
         attendanceDTOList = new ArrayList();
         for (int i = 1; i < allContentFromFile.size(); i++) {
@@ -59,14 +64,19 @@ public class AttendanceParser {
                 AttendanceDTO attendanceDTO = new AttendanceDTO();
                 System.out.println("values: " + Arrays.toString(values));
                 attendanceDTO.setEmpId(values[0].trim());
-                attendanceDTO.setAttendedDate(new Date(new Long(values[1])));
-                attendanceDTO.setInTime(new Date(new Long(values[1])));
-                attendanceDTO.setOutTime(new Date(new Long(values[2])));
+                attendanceDTO.setInTimestamp(values[1]);
+                attendanceDTO.setOutTimestamp(values[2]);
+                
+                LocalDateTime localDate =LocalDateTime.ofEpochSecond(Long.valueOf(values[1]), 1, ZoneOffset.UTC);
+                String format = localDate.toLocalDate().format(DateTimeFormatter.ISO_DATE);
+                Date date = Date.valueOf(format);
+                System.out.println("date : "+date);
+                attendanceDTO.setAttendedDate(date);
                 attendanceDTOList.add(attendanceDTO);
             }
         }
     }
-
+    
     public List<AttendanceDTO> getAttendanceDTOList() {
         return attendanceDTOList;
     }
